[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/Resources/Player/player_sprite.png" type="Texture" id=1]
[ext_resource path="res://assets/Codes/PlayerController.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.41165, 2.43336 )

[sub_resource type="Animation" id=2]
resource_name = "Fall"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16 ]
}

[sub_resource type="Animation" id=5]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 5 ]
}

[sub_resource type="Animation" id=6]
resource_name = "attack"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attackbox/Attackbox_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.152093, 0.252918 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
length = 1.12
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -21 ), Vector2( 3, -21 ), Vector2( 5, -21 ), Vector2( 7, -21 ), Vector2( 9, -21 ), Vector2( 11, -21 ), Vector2( 13, -21 ), Vector2( 15, -21 ), Vector2( 17, -21 ), Vector2( 19, -21 ), Vector2( 21, -21 ), Vector2( 23, -21 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player_sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=8]
resource_name = "toke_damage"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -14.2998, -8.73876 ), Vector2( -30.1884, -11.9165 ), Vector2( -44.4882, -8.34155 ), Vector2( -54.8158, 1.98608 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Jump"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Run"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "attack"

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=21]
states/Idle/node = SubResource( 9 )
states/Idle/position = Vector2( 113, 115.889 )
states/Jump/node = SubResource( 10 )
states/Jump/position = Vector2( 275.667, 200.333 )
states/Run/node = SubResource( 11 )
states/Run/position = Vector2( 274.333, 47 )
states/attack/node = SubResource( 12 )
states/attack/position = Vector2( 498.333, 114.852 )
transitions = [ "Idle", "Jump", SubResource( 13 ), "Idle", "Run", SubResource( 14 ), "Run", "Idle", SubResource( 15 ), "Jump", "Idle", SubResource( 16 ), "Run", "Jump", SubResource( 17 ), "Idle", "attack", SubResource( 18 ), "Run", "attack", SubResource( 19 ), "attack", "Idle", SubResource( 20 ) ]
start_node = "Idle"
graph_offset = Vector2( -69.3162, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=22]

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 10.8157, 11.6263 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 4.14624, 12.659 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0.0225496, -0.225725 )
collision_layer = 2
collision_mask = 19
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Player_sprite" type="Sprite" parent="."]
position = Vector2( 0, -35.9416 )
texture = ExtResource( 1 )
hframes = 32
frame = 4

[node name="Player_collision2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.493093, -2.21174 )
shape = SubResource( 1 )

[node name="Player_animation" type="AnimationPlayer" parent="."]
anims/Fall = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Jump = SubResource( 4 )
anims/Run = SubResource( 5 )
anims/attack = SubResource( 6 )
anims/testeanimation = SubResource( 7 )
anims/toke_damage = SubResource( 8 )

[node name="Player_animation_machine" type="AnimationTree" parent="."]
tree_root = SubResource( 21 )
anim_player = NodePath("../Player_animation")
active = true
parameters/playback = SubResource( 22 )

[node name="Dust_placeholder" type="Position2D" parent="."]
position = Vector2( 0, -2.34885 )

[node name="Dust_particles" type="Node" parent="."]

[node name="Attackbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 32

[node name="Attackbox_collider" type="CollisionShape2D" parent="Attackbox"]
position = Vector2( 19.4178, -17.1839 )
shape = SubResource( 23 )
disabled = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 16

[node name="Hitbox_collider" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.22352, -12.4413 )
shape = SubResource( 24 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -39.6559 )
current = true
smoothing_enabled = true
smoothing_speed = 10.0
[connection signal="body_entered" from="Hitbox" to="." method="_on_Healthbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_Healthbox_body_exited"]
